update az
